tdf#117596 set the size for Asian and Complex char height too

Change-Id: I703fc4d1cf34747d924a7fa44913a4bfe9bff67b
Reviewed-on: https://gerrit.libreoffice.org/54406
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>